Version 0.3.3Aa7

- Improved orderID creation time.
- Completed nosocrypto implementation.
- Deprecated Big Maths functions.
- EndPerformance converted to function.
- Implemented thread manager on nosodebug.
- Optimized AppFileName.

Version 0.3.3Aa6

- Fixed leak on rebuild sumary with coinbase transaction.

Version 0.3.3Aa5

- Deprecated PoS: partition between MNs and project, block +88400.

Version 0.3.3Aa4

- Unit nosocrypto created.
- mpcripto deprecated.
- Removed history tab and dependencyes.
- Removed current job and all dependencyes.
- Removed nobiex tab.
- Removed Antifreeze references.

Version 0.3.3Aa3

- Fixed bug on masternodes verification.

Version 0.3.3Aa2

- Funds command implemented.
- SetMilitime replaced with debug functions.
- Console log moved to debug.
- Events log moved to debug.
- Exceptions log moved to debug.
- Implemented Project coinbase payment.
- Deprecated PoS passive payments.
- Improved command lbinfo.
- Adjusted blockage function.
- Console log implemented.
- Deprecated GetWebSeedNodes function.
- IsAllSynced modified.
- Reimplemented auto-update option with warning.
- Commented advopt.txt file.
- Implemented unit nosogeneral.
- Fixed timestamp creation block bug.
- Improved address command.
- Added locked to nosocfg.

Version 0.3.3Aa1

- NTP servers list adjusted.
- NosoTime unit implemented.
- Time sinchronization every block.
- Old MNs system functions deleted.
- NosoCFG functions improved.
- Implemented multi-try for update feature.
- Removed old NTP system references.
- mpMiner deprecated.
- mpTime deprecated.
- mpOptions deprecated.
- Old options system completely deprecated.
- Busy slots are now keep alive for +15 seconds.
- Removed old pool controls.
- Old multi language system completely removed.
- mpLang deprecated.
- Poolmanage unit deprecated.
- Transaction history system completely removed.
- Removed IdHTTPUpdate.

Version 0.3.2Ba1

- Removed rukzuk pool address.
- Allowed pool addresses are now dynamic.