@@ -2148,9 +2148,9 @@ object Form1: TForm1
         Height = 440
         Top = 0
         Width = 392
-        ActivePage = TabProcesses
+        ActivePage = TabDoctor
         Align = alClient
-        TabIndex = 3
+        TabIndex = 5
         TabOrder = 0
         object TabDebug_Log: TTabSheet
           Caption = 'Log'
@@ -2358,7 +2358,6 @@ object Form1: TForm1
           Caption = 'Doctor'
           ClientHeight = 412
           ClientWidth = 384
-          TabVisible = False
           object PanelDoctor: TPanel
             Left = 0
             Height = 106
